--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dj-database-url==0.5.0
 dj-static==0.0.6
 Django==3.0.4
 django-cors-headers==3.2.1
+django-heroku==0.3.1
 django-rest-framework==0.1.0
 django-rest-knox==4.1.0
 djangorestframework==3.11.0
