--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dj-database-url==0.5.0
 dj-static==0.0.6
 Django==3.0.4
 django-cors-headers==3.2.1
+django-environ==0.4.5
 django-heroku==0.3.1
 django-rest-framework==0.1.0
 django-rest-knox==4.1.0
@@ -14,6 +15,7 @@ gitignore==0.0.8
 gunicorn==20.0.4
 psycopg2==2.8.4
 pycparser==2.20
+python-dotenv==0.12.0
 pytz==2019.3
 six==1.14.0
 sqlparse==0.3.1
