--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "react-app-rewired build && mv build ../build",
+    "build": "react-app-rewired build &&rm -rf ../build &&mv build ../build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
   },
