--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ gunicorn==20.0.4
 jmespath==0.9.5
 psycopg2==2.8.4
 pycparser==2.20
+pycrypto==2.6.1
 python-dateutil==2.8.1
 python-dotenv==0.12.0
 pytz==2019.3
