--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/codemod-v4": "^1.1.0",
+    "@ant-design/icons": "^4.0.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "antd": "^3.26.7",
+    "antd": "^4.1.1",
     "antd-dayjs-webpack-plugin": "0.0.8",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
