--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ docutils==0.15.2
 gitignore==0.0.8
 gunicorn==20.0.4
 jmespath==0.9.5
+Pillow==7.1.1
 psycopg2==2.8.4
 pycparser==2.20
 pycrypto==2.6.1
