--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
     "@ant-design/codemod-v4": "^1.1.0",
     "@ant-design/icons": "^4.0.5",
     "@atlaskit/inline-edit": "^10.0.30",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.7.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -16,8 +18,10 @@
     "customize-cra": "^0.9.1",
     "fs": "0.0.1-security",
     "js-file-download": "^0.4.10",
+    "npm-install": "^1.4.1",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
+    "react-dev-utils": "^10.0.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
