--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@ant-design/codemod-v4": "^1.1.0",
     "@ant-design/icons": "^4.0.5",
     "@atlaskit/inline-edit": "^10.0.30",
+    "@sentry/react": "^5.19.1",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.7.0",
     "@testing-library/jest-dom": "^4.2.4",
