--- a/client/package.json
+++ b/client/package.json
@@ -4,29 +4,30 @@
   "private": true,
   "dependencies": {
     "@ant-design/codemod-v4": "^1.1.0",
-    "@ant-design/icons": "^4.0.5",
+    "@ant-design/icons": "^4.2.2",
     "@atlaskit/inline-edit": "^10.0.30",
-    "@sentry/react": "^5.19.1",
+    "@sentry/react": "^5.24.2",
     "@stripe/react-stripe-js": "^1.1.2",
-    "@stripe/stripe-js": "^1.7.0",
+    "@stripe/stripe-js": "^1.9.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "antd": "^4.1.1",
+    "antd": "^4.6.5",
     "antd-dayjs-webpack-plugin": "0.0.8",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
+    "colorette": "^1.2.0",
     "customize-cra": "^0.9.1",
     "fs": "0.0.1-security",
     "js-file-download": "^0.4.10",
-    "npm-install": "^1.4.1",
+    "npm-install": "^1.4.3",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
-    "react-dev-utils": "^10.0.0",
+    "react-dev-utils": "^10.2.1",
     "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "3.4.1",
     "react-transition-group": "^4.3.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
