--- a/client/package.json
+++ b/client/package.json
@@ -25,13 +25,15 @@
     "react-app-rewired": "^2.1.5",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.12.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.3.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "responsive-react": "^3.0.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
