price code changed for stripe live

--- a/client/.env
+++ b/client/.env
@@ -2,4 +2,8 @@ REACT_APP_DEVELOPMENT_SERVER_URL=http://localhost:8000/api/v1/
 REACT_APP_PRODUCTION_SERVER_URL=https://filesec.herokuapp.com/api/v1/
 REACT_APP_TEST_STRIPE_PK=pk_test_9radQ2WXLrFFlDGV0XqNMUkw00PoyDNs29
 REACT_APP_PRODUCTION_STRIPE_PK=pk_live_iyPbhH04G2xJnlJwIi4gCQPi00y2HagUM9
+REACT_APP_PLAN_A_TEST_INR_PRICEID=price_1H3yk3AD7nX8Xg8myxZ505pY
+REACT_APP_PLAN_B_TEST_INR_PRICEID=price_1H3yk3AD7nX8Xg8myxZ505pY
+REACT_APP_PLAN_A_LIVE_INR_PRICEID=price_1HVfH1AD7nX8Xg8mp6Z32Cf9
+REACT_APP_PLAN_B_LIVE_INR_PRICEID=price_1HVfGrAD7nX8Xg8murY9i5md
 
