--- a/client/.env
+++ b/client/.env
@@ -6,4 +6,8 @@ REACT_APP_PLAN_A_TEST_INR_PRICEID=price_1H3yk3AD7nX8Xg8myxZ505pY
 REACT_APP_PLAN_B_TEST_INR_PRICEID=price_1H3ynxAD7nX8Xg8mKDhsWjHT
 REACT_APP_PLAN_A_LIVE_INR_PRICEID=price_1HVfH1AD7nX8Xg8mp6Z32Cf9
 REACT_APP_PLAN_B_LIVE_INR_PRICEID=price_1HVfGrAD7nX8Xg8murY9i5md
+REACT_APP_PLAN_A_TEST_PRODUCTID=prod_HdFE1m8mevVtpd
+REACT_APP_PLAN_B_TEST_PRODUCTID=prod_HdFIsy4i8RbOKC
+REACT_APP_PLAN_A_LIVE_PRODUCTID=prod_I5qyAkJEtKSgiY
+REACT_APP_PLAN_B_LIVE_PRODUCTID=prod_I5qyRRKwvSoORT
 
