--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@ant-design/codemod-v4": "^1.1.0",
     "@ant-design/icons": "^4.2.2",
     "@atlaskit/inline-edit": "^10.0.30",
+    "@material-ui/core": "^4.11.0",
     "@sentry/react": "^5.24.2",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.9.0",
