--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ dj-database-url==0.5.0
 dj-static==0.0.6
 Django==3.0.4
 django-cors-headers==3.2.1
+django-crum==0.7.7
 django-email-verification==0.0.2
 django-environ==0.4.5
 django-heroku==0.3.1
