--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^2.16.1",
     "emoji-mart": "^3.0.0",
     "js-cookie": "^2.2.0",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-cropper": "^2.1.4",
